# DecisionTrace

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  decisions.py  evaluations.py
app/core/: config.py  exceptions.py  hard_constraints.py  policies.py  schemas.py  utils.py
app/decision_engine/: engine.py
app/evaluation/: calibration.py  evaluator.py
app/evidence_planner/: planner.py
app/llm_gateway/: client.py
app/observability/: metrics.py
app/trace_store/: search.py  store.py
config/: prometheus.yml
docs/post_mortems/: template.md
docs/walkthroughs/: scenario_shadow_veto.md
migrations/: 001_initial_schema.sql
policies/: default.yaml
prompts/: decision_engine.jinja  evidence_planner.jinja
tests/: conftest.py  manual_test.py
tests/integration/: test_decision_pipeline.py
tests/load/: locustfile.py
